# Scratchpads

./: .gitignore  .gitmodules  README.md
cpp/armacheck/: CMakeLists.txt  example.cpp  fftcheck.cpp  order.cpp
cpp/codility/: CMakeLists.txt  bingap.cpp  carpass.cpp  cycrot.cpp  eqsum.cpp  leader.cpp  maxprofit.cpp  minavg.cpp  oddoc.cpp  test1.cpp  test2.cpp
cpp/conncheck/: .ccls  CheckRemote.h  Makefile  check.cpp
cpp/general/: CMakeLists.txt  cin.cpp  containers.cpp  shdat.cpp  special.cpp  uptr.cpp
cpp/graphtheory/: CMakeLists.txt  ex2.cpp  lunar.cpp
cpp/hackerrank/: CMakeLists.txt  nCk.cpp
cpp/hackerrank/ai/bots/: CMakeLists.txt  savebot.cpp
cpp/hackerrank/cpp/: hrml.cpp
cpp/hackerrank/cpp/deq/: CMakeLists.txt  deq.cpp
cpp/hackerrank/cpp/hrml/: CMakeLists.txt  hrml.cpp  hrml_sub.cpp
cpp/hackerrank/cpp/varry/: CMakeLists.txt  va.cpp
cpp/hackerrank/datastructs/arrays/: CMakeLists.txt  dyna.cpp
cpp/hackerrank/datastructs/heaps/: CMakeLists.txt  hchk.cpp  hmed.cpp
cpp/hackerrank/datastructs/stacks/: CMakeLists.txt  balb.cpp
cpp/hackerrank/datastructs/trees/: CMakeLists.txt  btbfs.cpp  btree.hpp  btswap.cpp  bttop.cpp  swapsub.cpp  tcalc.cpp
cpp/hackerrank/datastructs/trees/ex/bfs/input/: input00.txt
cpp/hackerrank/datastructs/trees/ex/top/output/: output01.txt
cpp/hackerrank/graphtheory/: CMakeLists.txt  ex1.cpp  graph.cpp  graph.h  graph.hpp  library.cpp  lunar.cpp  lunarwtf.cpp  out.h
cpp/hackerrank/graphtheory/libex/: input
cpp/hackerrank/samples/: bst_ex1.cpp
cpp/hackerrank/uncategory/: CMakeLists.txt  camelCase.cpp  coins.cpp  coins2.cpp  day1.cpp  lshift.cpp  nCk.cpp  pickup.cpp  sparse.cpp
cpp/matperf/: .gitignore  CMakeLists.txt  TimeThis.h  buildmat.cpp  eval.cpp  zfmm2dpart_call.cpp
cpp/numerics/quaditer/: CMakeLists.txt  numinfo.cpp  smallquad.cpp
cpp/numerics/spring/: CMakeLists.txt  spring.sh  spring_calc.cpp
cpp/odeex/: CMakeLists.txt  trapode.cpp
cpp/odeex/test/: trapplot.py
cpp/pde/: CMakeLists.txt  animate.gnuplot  explicit_heat.cpp
cpp/problem/: ASolution.hpp  ASolver.hpp  ASolverData.hpp  BSolution.hpp  CMakeLists.txt  Problem.hpp  ProblemLib.cpp  Solution.hpp  Solver.hpp  example.cpp  problem.cpp
cpp/traits/: CMakeLists.txt  ex1.cpp
cpp/unittest/: CMakeLists.txt  sanity.cpp
julia/: Check CPPortrait package.ipynb  Check Complex.ipynb  Test Images.ipynb
matlab/: makeVelocity.m
python/: .gitignore
python/notebooks/: .gitignore  Boundary point checks.ipynb  Compare poly data.ipynb  InterpDFT.ipynb  InterpFFT.ipynb  ODE Trapezoid.ipynb  Pandas.ipynb  Plot samples.ipynb  Process GNUCash.ipynb  ShowArmaMat.ipynb  Sudoku class jig.ipynb  arma.py  ibm.csv
python/notebooks/finance/: BS Pricing.ipynb  Log normal pricing.ipynb  Markov and coin toss.ipynb  Notes.ipynb  OptionPricing.ipynb  ibm.csv
python/notebooks/flow/: Account flow.ipynb
python/notebooks/stat/: Brownian.ipynb  Same birthday odds.ipynb  Untitled.ipynb
python/optalk/: opread.py  stats.fish  trg-2.11.1.out  trg-2.8.8.out
python/sudoku/: .gitignore  prog.py  sudoku.py  suprof.py
